New movement and LED endpoints
